<resources>
    <string name="app_name">HyperRail</string>
    <string name="powered_by_irail_be">Powered by irail.be</string>

    <string name="title_disturbances">Disturbances</string>
    <string name="title_liveboard">Liveboard</string>
    <string name="title_vehicle">Train</string>
    <string name="title_route">Route</string>
    <string name="title_feedback">Feedback</string>
    <string name="title_activity_first_launch_guide">A short tour</string>

    <string name="permission_description_location_description">The app can show which stations are nearby if you provide your coarse location. Your location is never sent over the internet. You can change this in settings. Do you want to enable this functionality now?</string>
    <string name="permission_description_location_title">Locating nearby stations</string>

    <string name="action_share">Share this search</string>
    <string name="action_time">Change time</string>
    <string name="action_mark_as_favorite">Mark as favorite</string>
    <string name="action_unmark_as_favorite">Unmark as favorite</string>
    <string name="action_to">New route to here</string>
    <string name="action_from">New route from here</string>
    <string name="action_search">Search</string>
    <string name="action_close">Close</string>

    <string name="status_cancelled">Canceled</string>
    <string name="status_departure_cancelled">Departure canceled</string>
    <string name="status_partially_cancelled">Partially Canceled</string>
    <string name="contentdescription_timeline_icon" translatable="false">timeline_icon</string>

    <string name="marked_route_favorite">Marked route as favorite</string>
    <string name="unmarked_route_favorite">Unmarked route as favorite</string>
    <string name="marked_station_favorite">Marked station as favorite</string>
    <string name="unmarked_station_favorite">Unmarked station as favorite</string>
    <string name="marked_train_favorite">Marked train as favorite</string>
    <string name="unmarked_train_favorite">Unmarked train as favorite</string>
    <string name="undo">Undo</string>

    <string name="title_activity_settings">Settings</string>

    <string name="error_no_results_found">Your search returned no results. Try adjusting the search time.</string>
    <string name="error_servererror_invalid_response">The server did not return a valid response. Please try again later.</string>
    <string name="error_servererror_unavailable">Sorry, the server is not available right now. We\'re fixing this as soon as we can.</string>
    <string name="error_network_unavailable">Data can\'t be loaded. Are you connected to the internet?</string>
    <string name="error_network_connected_unavailable">You are connected to a network, but you don\'t seem to have a connection to the outside world.</string>
    <string name="error_network_unsafe">A secure SSL connection could not be established. Your Wi-Fi connection might be intercepted!</string>
    <string name="error_general">Something, somewhere, went terribly wrong. Please try again later.</string>

    <string name="error_departure_not_found_message">The departure station could not be found</string>
    <string name="error_destination_not_found_message">The destination station could not be found</string>
    <string name="error_departure_not_found_title">Invalid departure station</string>
    <string name="error_destination_not_found_title">Invalid destination station</string>
    <string name="search_station_name">Station name</string>
    <string name="search_train_name">Train id (e.g. IC 537)</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="warning_not_realtime_datetime">EEE yyyy/MM/dd HH:mm</string>
    <string name="warning_not_realtime">You are viewing results for</string>
    <string name="title_departures">Departures</string>
    <string name="action_swap">Swap direction</string>
    <string name="pref_startup_screen">Default screen when starting the app</string>
    <string name="error_route_from_missing">The departure station cannot be empty</string>
    <string name="error_route_to_missing">The arrival station cannot be empty</string>
    <string name="time_today">today</string>
    <string name="time_now">now</string>
    <string name="time_tomorrow">tomorrow</string>
    <string name="time_yesterday">yesterday</string>
    <string name="time_at">at</string>
    <string name="delay">%1$d\'</string>
    <string name="error_departure_equals_destination">Invalid query</string>
    <string name="error_departure_equals_destination_message">The arrival station has to be different from the departure station</string>

    <string name="placeholder_no_disturbances">There are no disturbances right now</string>

    <string name="feedback_explanation">If you have any suggestions, ideas, or problems with this application, please report them here. All feedback will be mailed to the developer.</string>
    <string name="feedback_hint">Type your feedback here</string>
    <string name="feedback_send">Send feedback</string>
    <string name="action_suggestion_delete">Remove from list</string>
    <string name="high_occupancy">High occupancy</string>
    <string name="low_occupancy">Low occupancy</string>
    <string name="medium_occupancy">Medium occupancy</string>
    <string name="occupancy_question">How crowded is your train?</string>
    <string name="spitsgids_feedback_sent">Your feedback has been sent!</string>
    <string name="spitsgids_feedback_error">Feedback couldn\'t be saved. Try again later.</string>
    <string name="load_previous_results">Tap to load earlier results</string>
    <string name="error_train_id_invalid">This is not a valid train id. Example: IC537.</string>
    <string name="No">No</string>
    <string name="Yes">Yes</string>
    <string name="action_shortcut">Create shortcut</string>
    <string name="shortcut_created">A shortcut has been added to your homescreen</string>
    <string name="walk_description">Walk to the next station</string>
    <string name="walk_heading">Walk</string>
    <string name="ETA_stop_arrival">At %s I will arrive in %s with %s</string>
    <string name="ETA_stop_departure">At %s I will leave from %s with %s</string>
    <string name="ETA_transfer_arrival">At %s I will arrive in %s with %s</string>
    <string name="ETA_transfer_departure">At %s I will leave from %s with %s</string>

    <string-array name="departarrive">
        <item>Depart</item>
        <item>Arrive</item>
    </string-array>

    <string name="title_activity_station">Station</string>

    <string name="list_day_names">Monday\nTuesday\nWednesday\nThursday\nFriday\nSaturday\nSunday</string>
    <string name="action_details">View details</string>
    <string name="show_as_notification">Pin as notification</string>
    <string name="action_share_arrival_eta">Share arrival ETA</string>
    <string name="action_share_departure_ETA">Share departure ETA</string>
    <string name="title_pick_station">Pick a station</string>
    <string name="menu_group_settings">Settings</string>


    <string name="shortcut_label_route_short">Route</string>
    <string name="shortcut_label_route_long">Plan a trip</string>
    <string name="shortcut_label_station_short">Departures</string>
    <string name="shortcut_label_station_long">View departures and arrivals</string>
    <string name="title_arrivals">Arrivals</string>
    <string name="title_station_facilities">Facilities</string>
    <string name="facility_ticket_vending_machines">Ticket vending machines</string>
    <string name="facility_bus_stop">Bus stop</string>
    <string name="facility_tram_stop">Tram stop</string>
    <string name="facility_subway_stop">Subway stop</string>
    <string name="facility_taxi_stop">Taxi stop</string>
    <string name="facility_bicycle_parking">Bicycle parking</string>
    <string name="facility_blue_bikes">Blue bikes</string>
    <string name="title_station_opening_hours">Opening Hours</string>
    <string name="warning_offline">You are offline. Data might not be up to date.</string>
    <string name="tap_to_retry">Failed to load results. Tap to retry.</string>
    <string name="title_rate">Rate the app!</string>
    <string name="title_beta_test">Test the Beta version</string>
    <string name="menu_group_feedback">Feedback</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="skip">Skip</string>
    <string name="station_details_not_available_description">Detailed information is not available for this station</string>
    <string name="station_details_not_available_title">Station information not available</string>
    <string name="station_not_found">Station not found</string>
    <string name="widget_error_cant_load">Can\'t load data.\n Remove this widget and try again.</string>

    <string name="dialog_title_shortcut_name">Shortcut title</string>
    <string name="button_add">Add</string>
    <string name="button_cancel">Cancel</string>

    <string name="placeholder_route_suggestions">Your recent and favorite routes will appear here. Pick two stations and hit the looking glass to make your first search.</string>
    <string name="placeholder_vehicle_suggestions">Your recent and favorite vehicles will appear here. Enter a vehicle code and hit the looking glass to make your first search.</string>
    <string name="placeholder_liveboard_suggestions">Your recent, favorite and nearby stations will appear here. Start typing and pick a stations to make your first search.</string>

    <string name="rate_dialog_title">Rate this app</string>
    <string name="rate_dialog_message">If you enjoy using this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thank you for your support!</string>
    <string name="rate_dialog_button_rate">Rate now</string>
    <string name="rate_dialog_button_later">Later</string>
    <string name="rate_dialog_button_no_thanks">No, thanks</string>

    <string name="crashlytics_dialog_title">Enable crash reporting</string>
    <string name="crashlytics_dialog_message">In order to fix potential issues with the app, anonymous crash reports can be uploaded. This allows for quicker fixes in case something goes wrong. Do you want to enable this feature?</string>
    <string name="crashlytics_dialog_button_enable">Enable</string>
    <string name="crashlytics_dialog_button_disable">Keep disabled</string>

    <string name="warning_composition_unavailable">This train composition is not available at this time</string>
    <string name="warning_composition_unconfirmed">This train composition is unconfirmed and is subject to change</string>
    <string name="pref_display_vehicle_composition">Show train compositions</string>
    <string name="pref_display_vehicle_composition_summary">Show the composition of trains when viewing train trip details. For example a diagram of the train, the location of first and second class carriages, the availability of airconditioning, …</string>
    <string name="pref_vehicle_composition_display_type_summary">Show the type of each carriage in a train composition</string>
    <string name="pref_vehicle_composition_display_type">Show carriage types</string>
    <string name="pref_vehicle_composition_display_number_summary">Show the number of each train or carriage. This number matches the number shown inside the train (if it is shown, depends on the train type).</string>
    <string name="pref_vehicle_composition_display_number">Display the trains vehicle number</string>

    <plurals name="route_intermediate_stops">
        <item quantity="one">Ride along for %1d stop</item>
        <item quantity="other">Ride along for %1d stops</item>
    </plurals>
    <string name="pref_mlgtraffic">Train images by MLGTraffic</string>
</resources>
