<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:theme="@style/HyperrailAccentSearchContainer">

        <EditText
            android:id="@+id/input_station"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardlist_textrow_double_height"
            android:maxLines="1"

            android:textColor="@color/colorTextLight"
            android:hint="@string/search_station_name"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:theme="@style/HyperrailAccentSearchText"
            android:inputType="textFilter"
            />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_primary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/cardlist_vertical_spacing" />
</LinearLayout>